syntax = "proto3";
option go_package = "./pb";
package pb;

message welcomeRequest {
    string event = 1;
}

message welcomeResponse {
    string result = 1;
}

message sendCardRequest {
    repeated int32 cards = 1;
    int32 target = 2;
}

message sendCardResponse {
    string result = 1;
}

message discardCardRequest {
    repeated int32 cards = 1;
}

message discardCardResponse {
    string result = 1;
}

message showDrawCardsRequest {
}

message showDrawCardsResponse {
    repeated string cards = 1;
}

message showDiscardCardsRequest {
}

message showDiscardCardsResponse {
    repeated string cards = 1;
}

message showExhaustCardsRequest {
}

message showExhaustCardsResponse {
    repeated string cards = 1;
}

message endTurnRequest {
    string request = 1;
}

message endTurnResponse {
    string result = 1;
}

message nextFloorRequest {
    int32 room = 1;
}

message nextFloorResponse {
    string result = 1;
}

message Bonus {
    int32 type= 1;
    string name = 2;
}

message chooseBonusRequest {
    repeated Bonus bonus = 1;
}

message chooseBonusResponse {
    string result = 1;
}

message usePotionRequest {
    string name = 1;
}

message usePotionResponse {
    string result = 1;
}

message discardPotionRequest {
    string name = 1;
}

message discardPotionResponse {
    string result = 1;
}

message buyRequest {
    int32 type = 1;
    string name = 2;
}

message buyResponse {
    int32 type = 1;
    string name = 2;
}

message canUseRequest {
    int32 card = 1;
}

message canUseResponse {
    bool result = 1;
}

service card {
    rpc welcome(welcomeRequest) returns(welcomeResponse);
    rpc canUseCard(canUseRequest) returns(canUseResponse);
    rpc sendCard(sendCardRequest) returns(sendCardResponse);
    rpc discardCard(discardCardRequest) returns(discardCardResponse);
    rpc showDrawCards(showDrawCardsRequest) returns(showDrawCardsResponse);
    rpc showDiscardCards(showDiscardCardsRequest) returns(showDiscardCardsResponse);
    rpc showExhaustCards(showExhaustCardsRequest) returns(showExhaustCardsResponse);
    rpc endTurn(endTurnRequest) returns(endTurnResponse);
    rpc nextFloor(nextFloorRequest) returns(nextFloorResponse);
    rpc chooseBonus(chooseBonusRequest) returns(chooseBonusResponse);
    rpc usePotion(usePotionRequest) returns(usePotionResponse);
    rpc discardPotion(discardPotionRequest) returns(discardPotionResponse);
    rpc buy(buyRequest) returns(buyResponse);
}
